make api "register-user" WIP
