# user/user.controller.js
@@ -5,6 +5,7 @@ const userService = require('./user.service');
 
 // routes
 router.post('/create', createUser);
+router.post('/register', registerUser);
 
 
 module.exports = router;
@@ -14,6 +15,22 @@ async function createUser(req, res){
 
     if (!error) {
         let result = await userService.createUser(value.email, value.password);
+
+        if (result.hasOwnProperty("error")) {
+            return res.status(400).json(result);
+        }
+
+        return res.status(201).json(result);
+    }
+
+    return res.status(400).json({ error: error.message });
+}
+
+async function registerUser(req, res){
+    const { error, value } = userSchemas.registerUserRequestSchema.validate(req.body);
+
+    if (!error) {
+        let result = await userService.registerUser(value);
 
         if (result.hasOwnProperty("error")) {
             return res.status(400).json(result);
